# DDPM-by-Codex

./: README.md
7주차/ddpm_project/: .gitignore  AGENTS.md  AUTOMATIONS.md  README.md  README_HITL_AUTOMATION.md  pyproject.toml  requirements.txt
7주차/ddpm_project/.codex/: config.toml
7주차/ddpm_project/codex/rules/: default.rules
7주차/ddpm_project/configs/: train.yaml  train_toy.yaml
7주차/ddpm_project/configs/callbacks/: default.yaml  toy_default.yaml
7주차/ddpm_project/configs/data/: toy_classification.yaml
7주차/ddpm_project/configs/diffusion/: ddpm.yaml  ddpm_m1.yaml
7주차/ddpm_project/configs/experiment/: ablation_example.yaml  paper_repro.yaml
7주차/ddpm_project/configs/lane/: record.yaml  wip.yaml
7주차/ddpm_project/configs/logging/: wandb.yaml
7주차/ddpm_project/configs/model/: toy_mlp.yaml  unet_base.yaml  unet_m1_small.yaml
7주차/ddpm_project/configs/optimizer/: adam.yaml
7주차/ddpm_project/configs/runtime/: default.yaml  m1_quick.yaml
7주차/ddpm_project/data/: README.md
7주차/ddpm_project/docs/: IMPLEMENT.md  PLAN.md  PROMPT.md  STATUS.md
7주차/ddpm_project/notebooks/: README.md
7주차/ddpm_project/reports/: latest.md  weekly.md
7주차/ddpm_project/scripts/: eval.py  hitl_validate_workflow.py  toy_eval.py  toy_predict.py  toy_report.py  toy_sanity_check.py  toy_train.py  train.py
7주차/ddpm_project/tests/: test_data_shapes.py  test_diffusion_math.py  test_hydra_instantiation.py  test_sampler_consistency.py  test_toy_datamodule_io.py  test_toy_hydra_instantiation.py  test_toy_model_shapes.py  test_toy_smoke_configs.py  test_unet_interface.py
(+36 files in other folders)
